--- a/src/app/pages/galeria/galeria.component.html
+++ b/src/app/pages/galeria/galeria.component.html
@@ -1,5 +1,6 @@
 <h1> Heroes <small>Marvel y DC</small> </h1>
 <hr>
-<div class="card-columns">
 
+<div class="card-columns">
+    <app-card *ngFor="let heroe of heroes" [heroe]="heroe" ></app-card>
 </div>
