rutas con parametros

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -3,5 +3,6 @@
     <div class="card-body">
         <h5 class="card-title"> {{ heroe.nombre }} </h5>
         <p class="card-test"> <small> {{ heroe.bio }}</small> </p>
+        <p> <button class="btn btn-outline-info" [routerLink]="['/detalle', index]"> Ver detalle </button></p>
     </div>
 </div>
