--- a/src/app/pages/detalle/detalle.component.html
+++ b/src/app/pages/detalle/detalle.component.html
@@ -13,5 +13,9 @@
         <p>
             Casa: {{ heroe.casa}}
         </p>
+        <br>
+        <!-- <button [routerLink]="['/galeria']" class="btn btn-outline-danger">Regresar</button> -->
+        <button (click)="regresar()" class="btn btn-outline-danger">Regresar</button>
+        
     </div>
 </div>
