--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,8 +17,8 @@
 
     </ul>
     <div class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Buscar héroe" aria-label="Search">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
+      <input class="form-control mr-sm-2" type="search" placeholder="Buscar héroe" aria-label="Search" #termino (keyup.enter)="buscar(termino.value)">
+      <button (click)="buscar(termino.value)" class="btn btn-outline-primary my-2 my-sm-0" type="button">Buscar</button>
     </div>
   </div>
 </nav>
